--- a/gogo/src/main/res/values/strings.xml
+++ b/gogo/src/main/res/values/strings.xml
@@ -53,6 +53,8 @@
     <string name="tab_fragment_step_tv_step">0</string>
     <string name="tab_fragment_step_bt_reset">重置</string>
     <string name="tab_fragment_step_bt_control">开始</string>
+    <string name="tab_fragment_step_bt_pause">暂停</string>
+
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
